# klippo

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README.pt-BR.md  initial_prompt.md  plan.md
crates/klippo/: Cargo.toml
crates/klippo-capture/: Cargo.toml
crates/klippo-capture/src/: lib.rs
crates/klippo-core/: Cargo.toml
crates/klippo-core/src/: actions.rs  config.rs  error.rs  lib.rs  model.rs  paths.rs  search.rs
crates/klippo-core/src/store/: mod.rs  sqlite.rs
crates/klippo-dbus/: Cargo.toml
crates/klippo-dbus/src/: lib.rs
crates/klippo/src/: client.rs  daemon.rs  main.rs  setup.rs  ui.rs
data/: klippo-daemon.service  klippo.desktop  org.klippo.Daemon.service  style.css
extension/: extension.js  metadata.json
