[workspace]
resolver = "2"
members = [
    "crates/klippo-core",
    "crates/klippo-capture",
    "crates/klippo-dbus",
    "crates/klippo",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
license = "GPL-3.0-or-later"
description = "Klippo — a faithful KDE Klipper clone for Linux (Wayland + X11)"
authors = ["Daniel"]

[profile.release]
lto = "thin"
strip = true
