[package]
name = "klippo-capture"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Clipboard capture/write backends (X11, Wayland data-control, GNOME bridge) for Klippo."

[dependencies]
klippo-core = { path = "../klippo-core" }
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tokio = { version = "1", features = ["sync"] }
arboard = { version = "3.6.1", default-features = false }
